--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.26.1",
     "csstype": "^3.0.11",
+    "emotion-theming": "^11.0.0",
     "eslint-config-airbnb-typescript": "^16.1.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
