--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.27.1",
     "react-i18next": "^11.16.9",
+    "react-lottie": "^1.2.3",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
@@ -73,6 +75,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.179",
+    "@types/react-lottie": "^1.2.6",
     "@types/tinycolor2": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
